--- a/src/main/java/com/diegojacober/delivery/view/ClientView.form
+++ b/src/main/java/com/diegojacober/delivery/view/ClientView.form
@@ -137,6 +137,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jbtnLogoutActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jbtnOrders">
               <Properties>
@@ -199,9 +202,6 @@
         </Component>
         <Component class="javax.swing.JButton" name="jBtnNextArrow">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/com/diegojacober/delivery/img/next-icon.png"/>
             </Property>
@@ -224,9 +224,6 @@
         </Component>
         <Component class="javax.swing.JButton" name="jBtnBackArrow">
           <Properties>
-            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="ff" red="ff" type="rgb"/>
-            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/com/diegojacober/delivery/img/back-arrow.png"/>
             </Property>
