--- a/src/main/java/com/diegojacober/delivery/view/ClientView.form
+++ b/src/main/java/com/diegojacober/delivery/view/ClientView.form
@@ -202,6 +202,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jBtnNextArrow">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/com/diegojacober/delivery/img/next-icon.png"/>
             </Property>
@@ -224,6 +227,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jBtnBackArrow">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="ff" green="ff" red="ff" type="rgb"/>
+            </Property>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
               <Image iconType="3" name="/com/diegojacober/delivery/img/back-arrow.png"/>
             </Property>
