--- a/src/main/java/com/diegojacober/delivery/view/Login.form
+++ b/src/main/java/com/diegojacober/delivery/view/Login.form
@@ -254,7 +254,7 @@
                   <Border info="null"/>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
-                  <Color id="Default Cursor"/>
+                  <Color id="Cursor Padr&#xe3;o"/>
                 </Property>
               </Properties>
               <Events>
