Screen for orders

--- a/src/main/java/com/diegojacober/delivery/view/ClientPages/DoOrder.form
+++ b/src/main/java/com/diegojacober/delivery/view/ClientPages/DoOrder.form
@@ -156,6 +156,9 @@
               <Border info="null"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jBtnAddItemsActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
